# gsoc2025-Shu_Xiao

./: README.md
IndustrialRobots/machine_vision_exercise/: package.xml  setup.cfg  setup.py
IndustrialRobots/machine_vision_exercise/config/: models_info.yaml  sensors_3d.yaml
IndustrialRobots/machine_vision_exercise/launch/: machine_vision_exercise.launch.py
IndustrialRobots/machine_vision_exercise/machine_vision_exercise/: HAL.py  HAL_backup.py  MyAlgorithm.py  MyAlgorithm_full_solution.py  PERCEPTION.py
IndustrialRobots/pcl_filter/: CMakeLists.txt  package.xml
IndustrialRobots/pcl_filter/launch/: pcl_filter.launch.py
IndustrialRobots/pcl_filter/src/: example.cpp  pcl_filter_server.cpp  pcl_filter_server_with_Segmentation_fault_issue_200250822.cpp
IndustrialRobots/pcl_filter/srv/: ColorFilter.srv  ShapeFilter.srv
IndustrialRobots/pcl_filter_msgs/: CMakeLists.txt  package.xml
IndustrialRobots/ros2_SimRealRobotControl/ros2srrc_endeffectors/robotiq_2f85/urdf/: robotiq_2f85_macro.urdf.xacro
IndustrialRobots/ros2_SimRealRobotControl/ros2srrc_launch/: package.xml
IndustrialRobots/ros2_SimRealRobotControl/ros2srrc_launch/gazebo/: simulation_machine_vision.launch.py
IndustrialRobots/ros2_SimRealRobotControl/ros2srrc_launch/moveit2/: machine_vision.launch.py  moveit2.launch.py
docs/: Gemfile  README.md  _config.yml  about.md  index.html  progress.md
docs/_data/: authors.yml
docs/_sass/: my-inline.scss
docs/_site/: 404.html  feed.xml  index.html  sitemap.xml
docs/_site/about/: index.html
docs/_site/assets/: ieconfig.xml  manifest.json
docs/_site/assets/css/: hydejack-8.4.0.css
docs/_site/blog/2025-05-30-Community-Bonding-Period/: index.html
docs/_site/blog/2025-06-02-Week-1/: index.html
docs/_site/blog/2025-06-09-Week-2/: index.html
docs/_site/posts/: index.html
docs/_site/progress/: index.html
docs/blog/_posts/: 2025-05-30-Community-Bonding-Period.md  2025-06-08-Week-1.md  2025-06-15-Week-2.md  2025-06-22-Week-3.md  2025-06-29-Week-4.md  2025-07-06-Week-5.md  2025-07-13-Week-6.md  2025-07-20-Week-7.md  2025-07-27-Week-8.md  2025-08-03-Week-9.md  2025-08-10-Week-10.md  2025-08-17-Week-11.md  2025-08-24-Week-12.md  2025-08-31-Week-13.md  2025-09-07-Week-14.md  2025-09-14-Week-15.md  2025-09-21-Week-16.md  2025-09-23-Final-Report.md  2025-09-28-Final-Report.md  2025-09-28-Finla-Report.md
