<?xml version="1.0"?>
<package format="3">
  <name>machine_vision_exercise</name>
  <version>0.0.0</version>
  <description>Vision exercise</description>
  <maintainer email="shu.xiao@students.iaac.net">shu</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
