<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeid="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>pcl_filter</name>
  <version>0.0.0</version>
  <description>PCL filtering package for object detection</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>pcl_filter_msgs</depend>
  <depend>moveit_msgs</depend>
  
  
  <!-- Custom message dependencies -->
  <!-- <depend>your_custom_msgs</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>